<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp">

    <!-- Vertikale Positionierung -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <!-- E-Mail -->
    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/search_edit_background"
        android:autofillHints="email"
        android:padding="12dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textHint"
        app:layout_constraintTop_toTopOf="@id/guideline_center" />

    <!-- Passwort -->
    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@drawable/search_edit_background"
        android:autofillHints="password"
        android:padding="12dp"
        android:textColor="@color/textPrimary"
        android:textColorHint="@color/textHint"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <!-- Login Button -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_login"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

    <!-- Register Button -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/button_register"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
