<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="@color/cardBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <!-- Vorschaubild -->
        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@drawable/image_placeholder_bg"
            android:contentDescription="@string/preview_image_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Titel -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/preview_title_text"
            android:textColor="@color/textPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_preview"
            app:layout_constraintTop_toTopOf="@id/image_preview" />

        <!-- Beschreibung -->
        <TextView
            android:id="@+id/description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:maxLines="2"
            android:text="@string/preview_description_text"
            android:textColor="@color/textSecondary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:layout_constraintStart_toEndOf="@id/image_preview"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Preis -->
        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/priceGreen"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintTop_toBottomOf="@id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="12dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
